# karpatkit

./: .gitignore  Dockerfile  Makefile  README.md  example_config.json  pyproject.toml  requirements-dev.txt
.github/: send-to-gcp.yaml
.github/workflows/: linting.yml  send-to-gcp.yaml  tests.yml  unittests.yml
src/defabipedia/: ABIs_fetcher.py  README.md  __init__.py  rename_jsons  types.py
src/defabipedia/_1inch/: __init__.py
src/defabipedia/aave_v3/: AAVE.json  ABPT.json  GHO.json  __init__.py  aWrappedNative.json  lending_pool_v3.json  paraswap_liquidity_adapter.json  paraswap_repay_adapter.json  stableDebtNative.json  stkAAVE.json  stkABPT.json  variableDebt.json  variableDebtNative.json
src/defabipedia/aci/: __init__.py  collector.json
src/defabipedia/angle/: steur.json
src/defabipedia/arbitrum/: __init__.py  delayed_inbox.json
src/defabipedia/arrakis/: arrakis_helper_v2.json  arrakis_public_vault.json  arrakis_v2.json
src/defabipedia/aura/: __init__.py  aura.json  aurabal_compounding_rewards.json  base_reward_pool.json  eth_claim_zap.json  gc_claim_zap.json  l2_coordinator.json  rewarder.json  stk_aura_bal.json  vl_aura.json
src/defabipedia/balancer/: __init__.py  abpt.json  bcow_factory.json  bcow_pool.json  gauge_factory.json  gauge_reward_helper.json  pool_token.json  queries.json  universal_bpt.json  vebal.json  vebal_fee_distributor.json
src/defabipedia/balancer_v3/: __init__.py  liquidity_pool.json
src/defabipedia/balancerv3/: __init__.py
src/defabipedia/centrifuge/: __init__.py  liquidity_pool.json  pool_manager.json
src/defabipedia/chainlink/: __init__.py
src/defabipedia/circles/: __init__.py
src/defabipedia/compound_v3/: arb_bridge_receiver.json  arb_cUSDTv3.json  base_rewards.json  base_timelock.json  eth_governor.json  optimism_base_bulker.json
src/defabipedia/compoundv3/: __init__.py  arb_bridge_receiver.json  arb_cUSDCv3.json  arb_configurator.json  arb_timelock.json  base_USDbC.json  base_base_bulker.json  base_bridge_receiver.json  base_cUSDCv3_ext.json  base_comet_factory.json  base_proxy_admin.json  base_rewards.json  comet_rewards.json  eth_base_bulker.json  eth_base_bulker_USDC.json  eth_base_bulker_weth.json  eth_cbETH.json  eth_comet_factory_USDT_wstETH.json  eth_configurator.json  eth_configurator_implementation.json  eth_cwstETHv3.json  eth_governor.json  eth_proxy_admin.json  eth_timelock.json  optimism_base_bulker.json  optimism_bridge_receiver.json  optimism_cUSDCv3.json  optimism_cWETHv3_ext.json  optimism_comet_factory.json  optimism_rewards.json  optimism_timelock.json  polygon_bridge_receiver.json  polygon_comet_proxy_admin.json  polygon_comet_rewards.json  polygon_timelock.json
src/defabipedia/convex/: __init__.py  claim_zap.py  staked_cvx.json
src/defabipedia/cowswap_signer/: __init__.py  cowswap_relayer.json  cowswap_signer.json
src/defabipedia/curve/: __init__.py  child_gauge.json  crypto_factory_pool.json  swap_template_base.json  zap_two.json
src/defabipedia/dolomite/: __init__.py  dARB_isolation.json  dolomite_margin.json
src/defabipedia/enzyme/: __init__.py
src/defabipedia/ethena/: __init__.py
src/defabipedia/etherfi/: __init__.py  accountant.json  liquidETH.json  teller_multi_asset.json  weETH.json
src/defabipedia/gas_replenisher/: __init__.py  gas_replenisher.json
src/defabipedia/gmx/: __init__.py  order_vault.json  reader.json
src/defabipedia/gnosis/: __init__.py
src/defabipedia/helper_contracts/: __init__.py  balance_scanner.json
src/defabipedia/hop/: __init__.py  rewarder.json
src/defabipedia/hyperdrive/: target0vault.json
src/defabipedia/kelp_dao/: __init__.py  withdrawal_manager.json
src/defabipedia/kpk/: __init__.py  aave_leveraged_position.json  deposit_leveraged_position.json  nav_calculator.json  shares_v2.json  unwind_leveraged_position.json
src/defabipedia/lido/: __init__.py  trp_escrow_proto.json
src/defabipedia/maker/: __init__.py  gem_join.json  ilk_registry.json
src/defabipedia/maverick/: pool_tokens.json  position_v2.json
src/defabipedia/merkl/: distributor.json
src/defabipedia/morpho/: __init__.py  adaptative_Curve_IRM  adaptative_Curve_IRM.json  base_adaptative_Curve_IRM.json  base_morpho_blue.json  morpho_vault_v1.json  morpho_vault_v2.json  oracle_wstETH_USDC.json
src/defabipedia/mu/: trading_vault.json
src/defabipedia/multicall/: __init__.py
src/defabipedia/multisend/: __init__.py
src/defabipedia/nexus_mutual/: __init__.py  nexus_viewer.json
src/defabipedia/oivs/: __init__.py  nav_calculator.json  sharesv1.json
src/karpatkit/: __init__.py  api_services.py  cache.py  conftest.py  constants.py  explorer.py  functions.py  helpers.py  lazytime.py  node.py  nodetime.py  pretty_json.py
src/karpytkit/: constants.py  explorer.py  node.py
(+65 files in other folders)
