[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "karpatkit"
dynamic = ["version"]
description = 'A broad kit with useful DeFi tools'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "karpatkey", email = "info@karpatkey.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "diskcache>=5.4.0,<6.0",
    "web3>=6.12,<7.0",
    "requests>=2.31.0,<3.0",
]

[project.urls]
Issues = "https://github.com/karpatkey/karpatkit/issues"
Source = "https://github.com/karpatkey/karpatkit"
Homepage = "https://github.com/karpatkey/karpatkit"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/karpatkit", "src/defabipedia"]
exclude = [
  "src/karpatkit/tests",
  "src/defabipedia/tests",
]

# Linter configuruation.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts"
line_length = 120

[tool.pytest.ini_options]
python_files = "test_*.py tests.py"

[tool.black]
line_length = 120

[tool.flake8]
extend-exclude = [
    '.git',
    '__pycache__',
]
extend-ignore = ['E203', 'E266', 'E501', 'W605', 'W503',
  'E722', 'C901' # Re-enable E722 and C901 after fixing.
]
max-line-length = 120
max-complexity = 18
# Specify the list of error codes you wish Flake8 to report.
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
# Parallelism
jobs = 4
