[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "karpatkit"
dynamic = ["version"]
description = 'A broad kit with useful DeFi tools'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "karpatkey", email = "info@karpatkey.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "diskcache>=5.4.0,<6.0",
  "web3>=7.12.1,<8.0",
  "requests>=2.31.0,<3.0",
  "safe-eth-py>=7.5.0,<8.0",
  "asyncio>=3.4.3",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.6",
    "pytest>=7.2.2",
    "pretty-json>=1.2",
    "ruff>=0.8.5",
    "pytest-icdiff>=0.9",
]

[project.scripts]
pretty_json = "karpatkit.pretty_json:main_cli"

[project.urls]
Issues = "https://github.com/karpatkey/karpatkit/issues"
Source = "https://github.com/karpatkey/karpatkit"
Homepage = "https://github.com/karpatkey/karpatkit"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
template = "__version__ = \"{version}\\n\""

[tool.hatch.build.targets.wheel]
packages = ["src/karpatkit", "src/defabipedia"]
exclude = ["src/karpatkit/tests", "src/defabipedia/tests"]

[tool.pytest.ini_options]
python_files = "test_*.py tests.py"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff]
line-length = 120
